--- a/design/login.html
+++ b/design/login.html
@@ -2,37 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login Page</title>
     <link rel="stylesheet" href="../styles/style.css">
-    <script src="../scripts/script.js" defer></script>
+    <link rel="icon" href="https://fav.farm/🎵">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="generator.html">Generator</a>
-        <a href="playlists.html">Playlists</a>
-        <a href="stats.html">Stats</a>
-        <a href="help.html">Help</a>
-        <a href="login.html" class="selected" id="loginButton">Login</a>
-    </nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="generator.html">Generator</a>
+    <a href="playlists.html">Playlists</a>
+    <a href="stats.html">Stats</a>
+    <a href="help.html">Help</a>
+    <a href="login.html" class="selected" id="loginButton">Login</a>
+</nav>
+<h1>Log into Spotify</h1>
+<p>Authorize your account, and your profile should show up here! <a href="https://github.com/hcientist/Spotify-PKCE-Example">https://github.com/hcientist/Spotify-PKCE-Example</a></p>
+<button type="button" id="authorize">Authorize</button>
 
-    <div class="login-content">
-        <h1>Login to Spotify</h1>
-        <div>
-            <button id="authorize">Authorize</button>
-        </div>
-        <div>
-            <button id="get-token">Get Token</button>
-        </div>
-        <div>
-            <button id="profile-button">Get Profile</button>
-        </div>
-        <div>
-            <button id="generate-button">Generate Code Challenge</button>
-        </div>
-    </div>
+<div id="profile-info" style="display: none;">
+    <img id="profile-image" src="" alt="Profile Image">
+    <h2 id="profile-name"></h2>
+</div>
 
-    <script src="../scripts/script.js" defer></script>
+<output id="api-output"></output>
+<script src="../scripts/script.js"></script>
 </body>
 </html>
