--- a/design/login.html
+++ b/design/login.html
@@ -4,31 +4,108 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <title>Spotify PKCE Demo</title>
     <link rel="icon" href="https://fav.farm/🎵">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <style>
+        input:invalid {
+            border: 2px solid red;
+        }
+
+        output {
+            background-color: lightgray;
+            font-family: 'Courier New', Courier, monospace;
+            word-break: break-all;
+        }
+
+        label {
+            font-weight: bold;
+        }
+
+        li {
+            margin-block-end: 1rem;
+        }
+    </style>
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="generator.html">Generator</a>
-    <a href="playlists.html">Playlists</a>
-    <a href="stats.html">Stats</a>
-    <a href="help.html">Help</a>
-    <a href="login.html" class="selected" id="loginButton">Login</a>
-</nav>
-<h1>Log into Spotify</h1>
-<p>Authorize your account, and your profile should show up here! <a href="https://github.com/hcientist/Spotify-PKCE-Example">https://github.com/hcientist/Spotify-PKCE-Example</a></p>
+<h1>Spotify PKCE Demo</h1>
+<p>"Client-side-only" Spotify api consumption. find source code here <a href="https://github.com/hcientist/Spotify-PKCE-Example">https://github.com/hcientist/Spotify-PKCE-Example</a></p>
 <button type="button" id="authorize">Authorize</button>
 
-<div id="profile-info" style="display: none;">
-    <img id="profile-image" src="" alt="Profile Image">
-    <h2 id="profile-name"></h2>
-</div>
-
 <output id="api-output"></output>
-<script src="../scripts/script.js"></script>
+
+<script>
+    document.getElementById('authorize').addEventListener('click', () => {
+        // Get client ID and redirect URI
+        const clientId = 'bca2a89f33694250b5b79633e3435a39';
+        const redirectUri = 'https://mart32jm.github.io/design/login.html';
+        // Generate a code verifier
+        const codeVerifier = generateRandomString(128);
+        // Generate code challenge
+        generateCodeChallenge(codeVerifier)
+            .then(codeChallenge => {
+                localStorage.setItem('code_verifier', codeVerifier);
+                const state = generateRandomString(16);
+                const scope = 'user-read-private user-read-email user-modify-playback-state';
+                const args = new URLSearchParams({
+                    response_type: 'code',
+                    client_id: clientId,
+                    scope: scope,
+                    redirect_uri: redirectUri,
+                    state: state,
+                    code_challenge_method: 'S256',
+                    code_challenge: codeChallenge
+                });
+                window.location = 'https://accounts.spotify.com/authorize?' + args;
+            });
+    });
+
+    // After authorization and token grabbing, automatically fetch and display user's profile
+    const token = localStorage.getItem('access_token');
+    if (token) {
+        getProfile(token);
+    }
+
+    async function getProfile(accessToken) {
+        try {
+            const response = await fetch("https://api.spotify.com/v1/me", {
+                headers: {
+                    'Authorization': 'Bearer ' + accessToken,
+                },
+            });
+            const data = await response.json();
+            console.log(data);
+            document.getElementById('api-output').value = JSON.stringify(data, null, 2);
+        } catch (error) {
+            console.error('Error:', error);
+        }
+    }
+
+    function generateRandomString(length) {
+        let text = '';
+        const possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+        for (let i = 0; i < length; i++) {
+            text += possible.charAt(Math.floor(Math.random() * possible.length));
+        }
+        return text;
+    }
+
+    function generateCodeChallenge(codeVerifier) {
+        function base64encode(string) {
+            return btoa(String.fromCharCode.apply(null, new Uint8Array(string)))
+                .replace(/\+/g, '-')
+                .replace(/\//g, '_')
+                .replace(/=+$/, '');
+        }
+
+        const encoder = new TextEncoder();
+        const data = encoder.encode(codeVerifier);
+        const digest = window.crypto.subtle.digest('SHA-256', data);
+
+        return digest.then(d => base64encode(d));
+    }
+
+</script>
 </body>
 </html>
