--- a/design/login.html
+++ b/design/login.html
@@ -33,6 +33,32 @@
 <p>"Client-side-only" Spotify api consumption. find source code here <a href="https://github.com/hcientist/Spotify-PKCE-Example">https://github.com/hcientist/Spotify-PKCE-Example</a></p>
 <button type="button" id="authorize">Authorize</button>
 
+<details id="get-token" style="display:none;">
+    <summary>
+        <h2>Getting (access)Token</h2>
+    </summary>
+    <ol>
+        <li><button type="button" id="token">Get Token</button></li>
+    </ol>
+</details>
+
+<label for="token-output">(access) token:</label> <output id="token-output" name="token-output"></output>
+
+<h2>Have token, make api request(s)</h2>
+<ul>
+    <li><button type="button" id="profile">Get my profile</button></li>
+    <li>Search for items on Spotify<br><label for="query">Search query:</label><input size="32" type="text" name="query"
+                                                                                     id="query"><button type="button"
+                                                                                                         id="search-button">Search</button>
+    </li>
+    <li>Play items in the active spotify player for this user's account (something should be playing or recently played
+        in spotify for this account. on the computer, mobile or really anywhere should work fine.)
+        <label for="uris">space-separated list of spotify uris</label>
+        <textarea name="uris" id="uris" cols="36"
+                  placeholder="spotify:track:39rHfrVqCX6A55GF7uOZSC spotify:track:0grFc6klR3hxoHLcgCYsF4"></textarea>
+        <button type="button" id="play-button">▶️</button>
+    </li>
+</ul>
 <output id="api-output"></output>
 
 <script>
@@ -61,26 +87,29 @@
             });
     });
 
-    // After authorization and token grabbing, automatically fetch and display user's profile
-    const token = localStorage.getItem('access_token');
-    if (token) {
-        getProfile(token);
-    }
-
-    async function getProfile(accessToken) {
-        try {
-            const response = await fetch("https://api.spotify.com/v1/me", {
-                headers: {
-                    'Authorization': 'Bearer ' + accessToken,
-                },
-            });
-            const data = await response.json();
-            console.log(data);
-            document.getElementById('api-output').value = JSON.stringify(data, null, 2);
-        } catch (error) {
-            console.error('Error:', error);
+    document.getElementById('token').addEventListener('click', () => {
+        const code = new URLSearchParams(window.location.search).get('code');
+        if (!code) {
+            console.error('No authorization code found.');
+            return;
         }
-    }
+        getToken('bca2a89f33694250b5b79633e3435a39', 'https://mart32jm.github.io/design/login.html', code)
+            .then(token => {
+                document.getElementById('token-output').value = token;
+                getProfile(token);
+            });
+    });
+
+    document.getElementById('profile').addEventListener('click', () => {
+        const token = localStorage.getItem('access_token');
+        if (!token) {
+            console.error('No access token found.');
+            return;
+        }
+        getProfile(token);
+    });
+
+    // Other functions and event listeners remain the same as in your original code
 
     function generateRandomString(length) {
         let text = '';
@@ -105,6 +134,59 @@
 
         return digest.then(d => base64encode(d));
     }
+
+    function getToken(clientId, redirectUri, code) {
+        const codeVerifier = localStorage.getItem('code_verifier');
+        const body = new URLSearchParams({
+            grant_type: 'authorization_code',
+            code: code,
+            redirect_uri: redirectUri,
+            client_id: clientId,
+            code_verifier: codeVerifier
+        });
+
+        return fetch('https://accounts.spotify.com/api/token', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/x-www-form-urlencoded'
+            },
+            body: body
+        })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('HTTP status ' + response.status);
+                }
+                return response.json();
+            })
+            .then(data => {
+                localStorage.setItem('access_token', data.access_token);
+                document.getElementById('get-token').style.display = 'none';
+                return data.access_token;
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+    }
+
+    function getProfile(accessToken) {
+        fetch('https://api.spotify.com/v1/me', {
+            headers: {
+                Authorization: 'Bearer ' + accessToken
+            }
+        }).then(response => {
+            if (!response.ok) {
+                throw new Error('HTTP status ' + response.status);
+            }
+            return response.json();
+        }).then(profile => {
+            console.log(profile);
+            document.getElementById('api-output').value = JSON.stringify(profile, null, 2);
+        }).catch(error => {
+            console.error('Error:', error);
+        });
+    }
+
+    // Other functions remain the same as in your original code
 
 </script>
 </body>
